@@ -258,6 +258,12 @@ Bug fixes
 * LUCENE-2620: Fixed a bug in WildcardQuery where too many asterisks
   would result in unbearably slow performance.  (Nick Barkas via Robert Muir)
 
+* LUCENE-2617: Optional clauses of a BooleanQuery were not factored
+  into coord if the scorer for that segment returned null.  This
+  can cause the same document to score to differently depending on
+  what segment it resides in. (yonik)
+
+
 New features
 
 * LUCENE-2128: Parallelized fetching document frequencies during weight
